--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         ],
         "target": "es2016"
     },
-    "exclude": [
-        "node_modules"
+    "include": [
+        "src"
     ]
 }
