--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -3,8 +3,7 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
-trigger:
-- master 
+trigger: none
 
 pool:
   vmImage: 'ubuntu-latest'
