--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -5,6 +5,20 @@ variables:
   NodeVersion: '10.x'
 
 jobs:
+  - job: Linter
+    pool:
+      vmImage: 'vs2017-win2016'
+    steps:
+      - task: TSLint@1
+        inputs:
+          RuleLibrary: 'tslint'
+          Ruleset: 'tsrecommended'
+          FileSelectionType: 'fileGlob'
+          Files: '**\*.ts'
+          OutputFormat: 'json'
+          ToolVersion: 'latest'
+          TypeScriptVersion: 'latest'
+
   - job: 'Build'
 
     pool:
