--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@autorest/modelerfour": "^4.1.60",
     "@azure-tools/autorest-extension-base": "~3.1.0",
+    "@azure-tools/codemodel-v3": "^3.1.211",
     "@microsoft.azure/autorest.python": "^3.0.52",
     "node-yaml": "^3.2.0"
   },
