--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@azure-tools/codegen": "^2.1.222",
     "@azure-tools/codemodel": "~3.0.0",
     "@azure-tools/linq": "^3.1.212",
+    "js-yaml": "^3.13.1",
     "node-yaml": "^3.2.0"
   },
   "files": [
