--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "types": [
             "node"
         ],
-        "target": "es2016"
+        "target": "es2016",
+        "experimentalDecorators": true
     },
     "include": [
         "src"
