--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@autorest/cli.common": "^1.0.14",
     "@autorest/modelerfour": "^4.1.60",
     "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/codegen": "^2.1.222",
