--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
             "node"
         ],
         "target": "es2016",
-        "experimentalDecorators": true,
+        "experimentalDecorators": true
     },
     "include": [
         "src"
