--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -76,7 +76,7 @@ jobs:
       - task:  ms-codeanalysis.vss-microsoft-security-code-analysis.build-task-credscan.CredScan@2
         inputs:
           toolMajorVersion: 'V1'
-      - task: PostAnalysis@1
+      - task: ms-codeanalysis.vss-microsoft-security-code-analysis.build-task-postanalysis.PostAnalysis@1
         inputs:
           AllTools: false
           APIScan: false
