--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@autorest/cli.common": "^1.0.14",
     "@autorest/modelerfour": "^4.1.60",
+    "@azure-tools/async-io": "^3.0.209",
     "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/codegen": "^2.1.222",
     "@azure-tools/codemodel": "~3.0.0",
