--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@autorest/autorest": "3.0.6175",
     "@azure-tools/async-io": "^3.0.209",
     "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/codegen": "^2.1.222",
     "@azure-tools/codemodel": "3.0.260",
     "@azure-tools/linq": "^3.1.212",
+    "await-exec": "^0.1.2",
+    "dir-compare": "^2.2.0",
     "js-yaml": "^3.13.1",
     "node-yaml": "^3.2.0"
   },
