--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "@autorest/autorest": "3.0.6175",
+    "autorest": "^3.0.6187",
     "@azure-tools/async-io": "^3.0.209",
     "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/codegen": "^2.1.222",
