--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "10.17.0",
     "chai": "^4.2.0",
-    "eslint": "~5.4.0",
-    "mocha": "^5.2.0",
+    "eslint": "6.8.0",
+    "mocha": "7.1.1",
     "mocha-typescript": "^1.1.17",
     "node-yaml": "^3.2.0",
     "nyc": "^15.0.0",
