--- a/src/test/resources/attestation/attestation-az-modifier.yaml
+++ b/src/test/resources/attestation/attestation-az-modifier.yaml
@@ -2923,6 +2923,7 @@ operationGroups:
       name: AttestationProvider
       description: ''
       command: attestation attestation-provider
+      hasUpdate: true
     cli:
       name: AttestationProvider
       description: ''
