--- a/src/test/resources/attestation/attestation-az-namer.yaml
+++ b/src/test/resources/attestation/attestation-az-namer.yaml
@@ -2905,6 +2905,7 @@ operationGroups:
       name: AttestationProvider
       description: ''
       command: attestation attestation-provider
+      hasUpdate: true
     cli:
       name: AttestationProvider
       description: ''
