--- a/azure-pipelines/ci.yml
+++ b/azure-pipelines/ci.yml
@@ -79,7 +79,23 @@ jobs:
       vmImage: "windows-2019"
 
     steps:
-      - task:  CredScan@2
+      - task:  CredScan@3
         inputs:
           toolMajorVersion: 'V1'
-  
+      - task: PostAnalysis@1
+        inputs:
+          AllTools: false
+          APIScan: false
+          BinSkim: false
+          CodesignValidation: false
+          CredScan: true
+          FortifySCA: false
+          FxCop: false
+          ModernCop: false
+          PoliCheck: false
+          RoslynAnalyzers: false
+          SDLNativeRules: false
+          Semmle: false
+          TSLint: false
+          ToolLogsNotFoundAction: 'Standard'
+
