dont support nowait without show command

--- a/src/test/resources/attestation/attestation-az-modifier.yaml
+++ b/src/test/resources/attestation/attestation-az-modifier.yaml
@@ -3028,6 +3028,7 @@ operationGroups:
       name: AttestationProvider
       description: ''
       command: attestation attestation-provider
+      hasShowCommand: true
       hasUpdate: true
     cli:
       name: AttestationProvider
