--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -92,20 +92,25 @@ stages:
           RELEASE_VERSION="$CURRENT_VERSION-b.$VAR_BUILD_NUMBER"
           echo "[$(date -u)] LOG: RELEASE VERSION: $RELEASE_VERSION"
           echo "##vso[task.setvariable variable=release;isOutput=true]$RELEASE_VERSION"
+          echo "[$(date -u)] LOG: Build.Repository.ID: $(Build.Repository.ID)"
+          echo "[$(date -u)] LOG: Build.Repository.Name: $(Build.Repository.Name)"
+          echo "[$(date -u)] LOG: Build.Repository.Provider: $(Build.Repository.Provider)"
         name: GetVersions
       - task: GitHubRelease@1
         inputs:
           gitHubConnection: 'amecodegenbot'
-          repositoryName: 'Azure/autorest.az'
+          repositoryName: '$(Build.Repository.Name)'
           action: 'create'
           target: '$(Build.SourceVersion)'
           tagSource: 'userSpecifiedTag'
           tag: '$(GetVersions.release)'
+          releaseNotesSource: 'inline'
+          releaseNotesInline: 'Release Note Test Word: Add --use=https://test.com/t.tgz to generate code'
           assets: |
             $(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)/$(VAR_ARIFACT_NAME)/*.tgz
           isPreRelease: true
           changeLogCompareToRelease: 'lastNonDraftRelease'
-          changeLogType: 'commitBased'
+          changeLogType: 'issueBased'
 
 - stage: PublicRelease
   dependsOn: Test
