Add Release Note

--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -91,16 +91,22 @@ stages:
           echo "[$(date -u)] LOG: CURRENT VERSION: $CURRENT_VERSION"
           RELEASE_VERSION="$CURRENT_VERSION-b.$VAR_BUILD_NUMBER"
           echo "[$(date -u)] LOG: RELEASE VERSION: $RELEASE_VERSION"
+          RELEAST_NOTE="Adding \"--use=$(Build.Repository.Uri)/releases/download/$RELEASE_VERSION/autorest-az-$CURRENT_VERSION.tgz\" argument when triggering  \"autorest\" or \"gen\" command to generate code"
+          echo "[$(date -u)] LOG: RELEASE NOTE: $RELEAST_NOTE"
           echo "##vso[task.setvariable variable=release;isOutput=true]$RELEASE_VERSION"
+          echo "##vso[task.setvariable variable=note;isOutput=true]$RELEAST_NOTE"
         name: GetVersions
       - task: GitHubRelease@1
         inputs:
           gitHubConnection: 'amecodegenbot'
-          repositoryName: 'Azure/autorest.az'
+          repositoryName: '$(Build.Repository.Name)'
           action: 'create'
           target: '$(Build.SourceVersion)'
           tagSource: 'userSpecifiedTag'
           tag: '$(GetVersions.release)'
+          title: 'autorest.az $(GetVersions.release)'
+          releaseNotesSource: 'inline'
+          releaseNotesInline: '$(GetVersions.note)'
           assets: |
             $(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)/$(VAR_ARIFACT_NAME)/*.tgz
           isPreRelease: true
@@ -144,6 +150,7 @@ stages:
                 displayName: Publish
                 #failOnStderr: true
 
+
 - stage: Version
   dependsOn: PublicRelease
   condition: succeeded()
@@ -156,6 +163,30 @@ stages:
       inputs:
         versionSpec: '10.17.0'
       displayName: 'Install Node.js'
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: '$(VAR_ARIFACT_NAME)'
+        downloadPath: '$(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)'
+    - script: |
+        CURRENT_VERSION=$(node -p "require('./package.json').version")
+        echo "[$(date -u)] LOG: CURRENT VERSION: $CURRENT_VERSION"
+        echo "##vso[task.setvariable variable=release;isOutput=true]$CURRENT_VERSION"
+      name: GetVersions
+    - task: GitHubRelease@1
+      inputs:
+        gitHubConnection: 'amecodegenbot'
+        repositoryName: '$(Build.Repository.Name)'
+        action: 'create'
+        target: '$(Build.SourceVersion)'
+        tagSource: 'userSpecifiedTag'
+        tag: '$(GetVersions.release)'
+        title: 'autorest.az $(GetVersions.release)'
+        assets: |
+          $(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)/$(VAR_ARIFACT_NAME)/*.tgz
+        releaseNotesFilePath: './doc/RELEASE_NOTE.md'
+        addChangeLog: false
     - script: |
         REPO_URL_REPLACE="$(USER_GITHUB_TOKEN)@github"
         REPO_URL_PAT=${VAR_REPO_URL/'github'/$REPO_URL_REPLACE}
@@ -166,16 +197,6 @@ stages:
         git remote add originpat $REPO_URL_PAT
         git remote -v
       displayName: 'Config'
-    - script: |
-        CURRENT_VERSION=$(node -p "require('./package.json').version")
-        echo "[$(date -u)] LOG: CURRENT VERSION: $CURRENT_VERSION"
-
-        echo "[$(date -u)] LOG: ADD TAG: $CURRENT_VERSION"
-        git tag $CURRENT_VERSION
-
-        echo "[$(date -u)] LOG: PUSH TAG:"
-        git push originpat --tags
-      displayName: 'Add Public Release Tag'
     - script: |
         echo "[$(date -u)] LOG: CHECKOUT TO $VAR_REPO_BRANCHNAME"
         git checkout $VAR_REPO_BRANCHNAME -f
